--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/app.js",
+    "start": "node server/bin/www",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
   },
